--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,8 +5,8 @@ $color-skills: #E000D9;
 $color-portfolio: #00C49A;
 $color-contact: #DD5A40;
 
-$bg-grey: #403F4C;
-$text-grey: #EEF0F2;
+$text-grey: #403F4C;
+$bg-grey: #EEF0F2;
 $color-shadow: #1d1c22;
 
 
