--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,6 +9,7 @@ html {
 p, quote {
     font-family: "Krub", Georgia, serif;
     text-align: justify;
+    font-size: 1.1rem;
     line-height: 1.4rem;
 }
 
@@ -19,17 +20,17 @@ h1, h2 {
 }
 
 h3, .h3 {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 700;
 }
 
 h4 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
 }
 
 h5 {
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: 700;
 }
 
@@ -43,19 +44,18 @@ h5 {
     }
 }
 
-.cv {
+.cv-content {
     h3 {
-        font-size: 2rem;
+        font-size: 2.6rem;
         text-align: center;
-    }
-    h3, h4 {
         text-transform: uppercase;
     }
-    p {
-        font-size: 0.9rem;
+    h4 {
+        text-transform: uppercase;
+        font-weight: 600;
     }
     .bold {
-        font-weight: 600;
+        font-weight: 500;
     }
     .light {
         color: rgba($color: $text-grey, $alpha: 0.7);
