--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -2,7 +2,7 @@
     display: none;
     flex-direction: column;
     gap: 3rem;
-    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     padding: $padding-section;
     &-active {
