--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ h5 {
   border-radius: 50%;
   border: none;
   font-size: 1.2rem;
-  margin: auto;
   box-shadow: 1px 1px 5px #1d1c22;
 }
 
@@ -241,6 +240,46 @@ header nav {
 }
 .cv-content p {
   margin-bottom: 1rem;
+}
+
+#career {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.career-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  border: none;
+  font-size: 1rem;
+  text-align: center;
+  padding: 1rem;
+  background-color: rgba(255, 56, 100, 0.2);
+  color: #FF3864;
+  box-shadow: 1px 1px 5px #1d1c22;
+  cursor: pointer;
+}
+.career-title:hover, .career-title:focus {
+  background-color: #FF3864;
+  color: #EEF0F2;
+}
+.career-title-active {
+  background-color: #FF3864;
+  color: #EEF0F2;
+  box-shadow: inset 1px 1px 5px #1d1c22;
+}
+.career-text {
+  flex: 100%;
+  padding: 1.5rem;
+  order: 4;
+}
+.career-text-hidden {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
