--- a/sass/layout/_career.scss
+++ b/sass/layout/_career.scss
@@ -5,12 +5,6 @@
 }
 .career {
     &-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @include circle(9rem, 1rem);
-    text-align: center;
-    padding: 1rem;
     @include btn-color($color-career);
     @include box-shadow;
     cursor: pointer;
@@ -23,6 +17,7 @@
     &-text {
         flex: 100%;
         padding: 1.5rem;
+        height: 15rem;
         order: 4;
         &-hidden {
             display: none;
