--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,9 +8,11 @@
 
 @mixin btn {
     border: none;
-    border-radius: 1.25rem;
-    padding: 0.6rem 1rem;
-    font-size: 1.1rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
 }
 
 @mixin btn-color($color) {
