--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@
 @import "./layout/sections";
 @import "./layout/cv";
 @import "./layout/career";
+@import "./layout/skills";
+@import "./layout/portfolio";
