--- a/style.css
+++ b/style.css
@@ -69,14 +69,6 @@ h5 {
   color: rgba(64, 63, 76, 0.7);
 }
 
-.project-details-skills {
-  font-size: 0.9rem;
-  font-weight: 700;
-}
-.project-details-skills i {
-  font-size: 1rem;
-}
-
 .cv-content h3 {
   font-size: 2.6rem;
   text-align: center;
@@ -219,19 +211,12 @@ h5 {
 .btn-icon-contact:hover i, .btn-icon-contact:focus i {
   color: #EEF0F2;
 }
-.btn-icon-refer {
+.btn-icon-xs {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
   border: none;
   font-size: 1rem;
-  background-color: rgba(51, 184, 255, 0.2);
-  color: #33B8FF;
-  margin: 0.5rem;
-}
-.btn-icon-refer:hover, .btn-icon-refer:focus {
-  background-color: #33B8FF;
-  color: #EEF0F2;
 }
 
 header {
@@ -344,6 +329,102 @@ header nav {
   order: 4;
 }
 .career-text-hidden {
+  display: none;
+}
+
+#skills i {
+  padding: 0 5px;
+  color: #E000D9;
+}
+#skills p {
+  display: inline-flex;
+  gap: 3rem;
+}
+#skills ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 0.6rem;
+  max-height: 8rem;
+  width: 80%;
+  margin-top: 2rem;
+}
+
+.projects-perso, .projects-op {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3.5rem;
+  margin-bottom: 2rem;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 45%;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 5px #1d1c22;
+}
+.project-main {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.project-main .project-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  opacity: 1;
+}
+.project-main .project-title {
+  text-align: center;
+}
+.project-main-hidden {
+  opacity: 0.6;
+}
+.project-details {
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+  bottom: 5rem;
+  right: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  transform-origin: center bottom;
+  transform: scaleY(0%);
+  transition: 250ms ease-in-out;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.project-details::-webkit-scrollbar {
+  display: none;
+}
+.project-details p {
+  background-color: #EEF0F2;
+  padding-top: 0.7rem;
+}
+.project-details-skills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.2rem 1.5rem;
+  padding: 1.5rem 0 0.7rem;
+  background-color: #EEF0F2;
+  border-bottom: 1px #403F4C solid;
+}
+.project-details-active {
+  transform: scaleY(100%);
+}
+.project-links {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.project .btn-icon-more {
   display: none;
 }
 
