--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "./layout/header";
 @import "./layout/sections";
+@import "./layout/home";
 @import "./layout/cv";
 @import "./layout/career";
 @import "./layout/skills";
