--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@
 
 html {
     font-family: "Oxygen", 'Lucida Sans', 'Verdana';
-    color: $text-grey;
+    color: var(--text-grey);
 }
 
 p, quote {
@@ -39,7 +39,7 @@ h5 {
 }
 
 .light {
-    color: rgba($color: $text-grey, $alpha: 0.7);
+    opacity: 0.7;
 }
 
 .cv-content {
@@ -54,9 +54,19 @@ h5 {
     }
 }
 
+#refer {
+    a {
+        margin-left: 0.5rem;
+    }
+}
+
 #contact {
     p {
         line-height: 2rem;
         text-align: center;
+    }
+    span {
+        color: $color-contact;
+        line-height: 5rem;
     }
 }
