--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,14 @@
 header {
+    position: relative;
     display: flex;
-    gap: 6rem;
+    z-index: 1;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
     height: 4rem;
     padding-left: 10rem;
-    background-color: rgba($color: $text-grey, $alpha: 0.2);
+    padding-right: 1rem;
+    background-color: var(--bg-grey);
     @include box-shadow;
     img {
         position: absolute;
@@ -12,13 +17,52 @@ header {
         height: 8rem;
         width: 8rem;
         border-radius: 50%;
-        //@include circle(16rem);
         @include box-shadow;
     }
-    button {
+    h1, h2 {
+        white-space: nowrap;
+    }
+    #btn-nav-mobile {
         display: none;
     }
-    nav {
-        display: none;
+    .nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+        button {
+            visibility: hidden;
+            position: relative;
+            &:hover span {
+                transform: translateY(0);
+            }
+        }
+        span {
+            position: absolute;
+            z-index: -1;
+            top: 3.25rem;
+            left: -1.5rem;
+            font-size: 1rem;
+            padding: 0.6rem;
+            background-color: inherit;
+            color: inherit;
+            border-radius: 0 0 7px 7px;
+            transform: translateY(-2.5rem);
+            // Attention, décalage quand retour landing page (pas encore de transition sur header)
+            transition: 150ms ease-in;
+        }
+        #span-cv {
+            left: 0rem;
+        }
+    }
+    .switch-mode {
+        display: flex;
+        gap: 0;
+    }
+    &.active {
+        z-index: auto;
+        nav button {
+            visibility: visible;
+        }
     }
 }
