--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,75 +1,108 @@
-.projects-perso, .projects-op {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3.5rem;
-    margin-bottom: 2rem;
+.projects {
+    width: 80%;
+    &-btns {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        max-height: 65vh;
+        width: 20%;
+        padding-right: 1rem;
+        border-right: 0.1rem $color-portfolio solid;
+        .btn-circle-xs {
+            padding: 0.3rem;
+            &.active {
+                background-color: $color-portfolio;
+            }
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+        }
+    }
 }
 
 .project {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: none;
     justify-content: space-between;
-    gap: 2rem;
-    width: 45%;
-    padding: 1.5rem;
+    width: 100%;
     border-radius: 0.5rem;
     @include box-shadow;
+    overflow: hidden;
+    &-img {
+        position: relative;
+        z-index: 1;
+        min-width: 60%;
+        max-width: 60%;
+        border-radius: 0.5rem 0 0 0.5rem;
+        transform: translateX(0);
+        transition: 250ms ease-in-out;
+        &.hidden {
+            transform: translateX(-100%);
+        }
+    }
     &-main {
+        position: relative;
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
-        .project-img {
-            width: 100%;
-            height: 100%;
-            border-radius: 0.5rem;
-            opacity: 1;
+        justify-content: space-between;
+        width: 100%;
+        padding: 2rem 2rem 2rem 4rem;
+        border-left: 0.3rem rgba($color: $color-portfolio, $alpha: 0.2) solid;
+        overflow: hidden;
+        &-type {
+            margin-right: -2rem;
+            margin-left: auto;
+            padding: 0.5rem 1rem;
+            background-color: rgba($color: $color-portfolio, $alpha: 0.2);
+            color: $color-portfolio;
+            border-radius: 5px 0 0 5px;
+            @include box-shadow;
         }
-        .project-title {
-            text-align: center;
+        .h3 {
+            padding-bottom: 1rem;
         }
-        &.hidden {
-            opacity: 0.6;
+        &-links {
+            display: flex;
+            justify-content: flex-end;
+            gap: 1rem;
         }
     }
     &-details {
         position: absolute;
-        top:1.5rem; left:1.5rem;
-        bottom: 5rem; right:1.5rem;
+        top:0; bottom:0; left:0;
+        width: 60%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        transform-origin: center bottom;
-        transform: scaleY(0%);
-        transition: 250ms ease-in-out;
+        gap: 1.5rem;
+        padding: 2rem;
         overflow: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
         &::-webkit-scrollbar {
             display: none;
         }
-        p {
-            background-color: var(--bg-grey);
-            padding-top: 0.7rem;
-        }
         &-skills {
+            position: relative;
             display: flex;
             flex-wrap: wrap;
             gap: 0.2rem 1.5rem;
-            padding: 1.5rem 0 0.7rem;
-            background-color: var(--bg-grey);
-            border-bottom: 1px var(--text-grey) solid;
-        }
-        &.active {
-            transform: scaleY(100%);
+            padding: 1rem 1rem 1rem 4rem;
+            border-radius: 0.5rem;
+            background-color: rgba($color: $color-portfolio, $alpha: 0.2);
+            color: $color-portfolio;
+            .icon-tools {
+                position: absolute;
+                top: 50%; left: 1rem;
+                margin-top: -1rem;
+                line-height: 2rem;
+                text-align: center;
+                background-color: var(--bg-grey);
+            }
         }
     }
-    &-links {
+    &.active {
         display: flex;
-        justify-content: center;
-        gap: 1rem;
-    }
-    .btn-icon-more {
-        display: none;
     }
 }
